package co.edu.uniquindio.application.dtos.reserva;

public record EstadoReservaDTO() {
}
