package co.edu.uniquindio.application.models.entitys;

public class Alojamiento {
}
