package co.edu.uniquindio.application.models.enums;

public enum Rol {
    Huesped,
    Anfitrion,
    Administrador
}
