package co.edu.uniquindio.application.models.vo;

public class Direccion {
}
